--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ logging.pattern.console=@logging-pattern@
 spring.main.banner-mode=off
 
 settings.video.title=@project.name@
-settings.video.clear-color=#220000
+settings.video.clear-color=#0d214f
 
 app.info.release-name=@project.artifactId@
 app.info.release-package=@project.groupId@
