--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,6 @@ app.info.kotlin-version=@kotlin.version@
 app.info.spring-boot-version=@spring-boot.version@
 app.info.lwjgl-version=@lwjgl.version@
 app.info.welcome-message=@project.description@
+app.info.icon-resource-location=@icon.resource-location@
 app.info.contact.name=@maintainer.name@
 app.info.contact.email=@maintainer.email@
