--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
     <maintainer.name>Maia</maintainer.name>
     <maintainer.email>felipe_m92@live.com</maintainer.email>
     <main.class>${project.groupId}.App</main.class>
-    <icon.resource-location>application.ico</icon.resource-location>
     <output.directory>RELEASE/</output.directory>
     <logging-pattern>[%-4p] %d{dd/MM/yyyy HH:mm:ss} %32c &lt;%3L&gt; %msg%n</logging-pattern>
     <kotlin.version>1.3.61</kotlin.version>
@@ -200,7 +199,7 @@
               <goal>launch4j</goal>
             </goals>
             <configuration>
-              <icon>src/main/resources/${icon.resource-location}</icon>
+              <icon>application.ico</icon>
               <headerType>gui</headerType>
               <outfile>${output.directory}${binary.name}.exe</outfile>
               <jar>${output.directory}${binary.name}.jar</jar>
