--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ app.info.lwjgl-version=@lwjgl.version@
 app.info.welcome-message=@project.description@
 app.info.hide-mouse-cursor=false
 app.info.window-icon-location=icons/window.png
+app.info.about-image=icons/about-me.gif
 
 app.info.contact.name=@maintainer.name@
 app.info.contact.email=@maintainer.email@
