--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ app.info.kotlin-version=@kotlin.version@
 app.info.spring-boot-version=@spring-boot.version@
 app.info.lwjgl-version=@lwjgl.version@
 app.info.welcome-message=@project.description@
-app.info.hide-mouse-cursor=false
+app.info.hide-mouse-cursor=true
 app.info.window-icon-location=icons/window.png
 app.info.about-image=icons/about-me.gif
 
