--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,10 @@ settings.video.clear-color=#0d214f
 app.info.release-name=@project.artifactId@
 app.info.release-package=@project.groupId@
 app.info.release-version=@project.version@
-app.info.kotlin-version=@kotlin.version@
 app.info.spring-boot-version=@spring-boot.version@
 app.info.lwjgl-version=@lwjgl.version@
 app.info.welcome-message=@project.description@
-app.info.hide-mouse-cursor=true
+app.info.hide-mouse-cursor=false
 app.info.window-icon-location=icons/window.png
 app.info.about-image=icons/about-me.gif
 
